add base markup

--- a/index.html
+++ b/index.html
@@ -9,20 +9,71 @@
 </head>
 <body>
     <!-- header -->
-    <header></header>
+    <header>
+        <div class="container">
+            <div class="header__logo"></div>
+            <div class="header__menu"></div>
+        </div>
+    </header>
+
+
+
     <!-- main -->
     <main>
+
+
+
         <!-- banner -->
-        <section class="banner"></section>
+        <section class="banner">
+            <div class="container">
+                <div class="banner__image"></div>
+                <div class="banner__text"></div>
+            </div>
+        </section>
+
+
+
         <!-- priority -->
-        <section class="priority"></section>
+        <section class="priority">
+            <div class="container">
+                <div class="priority__title"></div>
+                <div class="priority__subtitle"></div>
+                <div class="priority__cards"></div>
+            </div>
+        </section>
+
+
+
         <!-- course -->
-        <section class="course"></section>
+        <section class="course">
+            <div class="container">
+                <div class="course__title"></div>
+                <div class="course__subtitle"></div>
+                <div class="course__cards"></div>
+            </div>
+        </section>
+
+
+
         <!-- feedback -->
-        <section class="feedback"></section>
+        <section class="feedback">
+            <div class="container">
+                <div class="feedback__text"></div>
+                <div class="feedback__form"></div>
+
+            </div>
+        </section>
     </main>
+
+
+
     <!-- footer -->
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="footer__info"></div>
+            <div class="footer__social"></div>
+        </div>
+    </footer>
 
 </body>
 </html>
