add bade markup

--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
     <!-- header -->
     <header>
         <div class="container">
-            <div class="header__logo"></div>
-            <div class="header__menu"></div>
+            <div class="header__logo">
+                <img class="header__logo" src="./image/header__logo.svg" alt="logo">
+            </div>
+            <div class="header__menu">
+                <div class="header__phone">
+                    <img src="./image/header__phone-icon.svg" alt="phone">
+                    <p class="header__phone-number">+7 (915) 111 55 11</p>
+                </div>
+                <div class="header__menu">
+                    <img src="./image/header__menu-icon.svg" alt="menu">
+                </div>
+            </div>
         </div>
     </header>
 
@@ -26,8 +36,12 @@
         <!-- banner -->
         <section class="banner">
             <div class="container">
-                <div class="banner__image"></div>
-                <div class="banner__text"></div>
+                <div class="banner__image">
+                    <img src="./image/banner__background-image.png" alt="banner">
+                </div>
+                <div class="banner__text">
+                    <p class="banner__title">Бухгалтерские обслуживание<br>для СНТ и коттеджных поселков<br> и гаражных кооперативов</p>
+                </div>
             </div>
         </section>
 
@@ -36,9 +50,150 @@
         <!-- priority -->
         <section class="priority">
             <div class="container">
-                <div class="priority__title"></div>
-                <div class="priority__subtitle"></div>
-                <div class="priority__cards"></div>
+                <div class="priority__text">
+                    <p class="priority__title">Наши приоритеты</p>
+                    <p class="priority__subtitle">Мы делаем всё, чтобы вам было удобно</p>
+                </div>
+                <div class="priority__cards">
+                    <div class="priority__cards_row">
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="priority__cards_row">
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="priority__cards_row">
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="priority__cards_row">
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="priority__cards_row">
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="priority__cards_row">
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -49,7 +204,16 @@
             <div class="container">
                 <div class="course__title"></div>
                 <div class="course__subtitle"></div>
-                <div class="course__cards"></div>
+                <div class="course__cards">
+                    <div class="course__card_content">
+                        <img src="./image/course__cards_icon.svg" alt="icon">
+                        <div class="course__card_text">
+                            <p class="course__card_title">< 50</p>
+                            <p class="course__card_subtitle">участков</p>
+                        </div>
+                    </div>
+                    <button class="course__button">Позвонить</button>
+                </div>
             </div>
         </section>
 
