--- a/index.html
+++ b/index.html
@@ -222,8 +222,35 @@
         <!-- feedback -->
         <section class="feedback">
             <div class="container">
-                <div class="feedback__text"></div>
-                <div class="feedback__form"></div>
+                <div class="feedback__text">
+                    <div class="feedback__title">Cвяжитесь с нами</div>
+                    <div class="feedback__title_description">Пожалуйста, укажите свои имя, телефон и e-mail. В комментариях можете указать свой вопрос или желаемое время и способ связи с вами. Мы ценим своих клиентов и обязательно свяжемся с вами.</div>
+                    <div class="feedback__contacts">Также вы можете написать нам на info@sntbuh.ru или позвонить +7 (915) 111 55 11
+                    </div>
+                    <button class="feedback__text_button">Написать в WhatsApp</button>
+                    <div class="feedback__subtitle">Обратная связь</div>
+                    <div class="feedback__subtitle_description">Поделитесь мнением о нашей работе или задайте нам любой интересующий вас вопрос в поле комментарий</div>
+                </div>
+                <div class="feedback__form">
+                    <div class="feedback__form_up">
+                        <div class="feedback__form_left">
+                            <input type="text" name="Имя" id="">
+                            <input type="tel" name="Телефон" id="">
+                        </div>
+                        <div class="feedback__form_right">
+                            <input type="text" name="Фамилия" id="">
+                            <input type="email" name="E-mail*" id="">
+                        </div>
+                    </div>
+                    <div class="feedback__form_center">
+                        <input type="text" name="Комментарий" id="">
+                    </div>
+                    <div class="feedback__form_description">
+                        <input type="checkbox" name="" id="">
+                        <p class="feedback__form_description_text">Нажимая кнопку «Отправить», я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года №152-ФЗ «О персональных данных», на условиях и для целей, определенных в Согласии на обработку персональных данных *</p>
+                    </div>
+                    <button class="feedback__form_button">Отправить</button>
+                </div>
 
             </div>
         </section>
@@ -234,8 +261,15 @@
     <!-- footer -->
     <footer>
         <div class="container">
-            <div class="footer__info"></div>
-            <div class="footer__social"></div>
+            <div class="footer__info">
+                <div class="footer__info_text">© 2018-2021 СНТ Бухгалтерия</div>
+                <div class="footer__info_text"> Услуги предоставляются ИП Бекетов Никита Александрович, ИНН 323501052743, ОГРНИП319774600479523.</div>
+                <div class="footer__info_text">Юридический адрес: 115172, г. Москва, Краснохолмская набережная, дом 13 строение 1</div>
+            </div>
+            <div class="footer__social">
+                <img src="./image/footer__social_icon-vk.svg" alt="vk" class="footer__social_icon-vk">
+                <img src="./image/footer__social_icon-telegram.svg" alt="telegram" class="footer__social_icon-telegram">
+            </div>
         </div>
     </footer>
 
