add banner style

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <!-- header -->
     <header>
         <div class="container">
-            <div class="header__logo">
-                <img class="header__logo" src="./image/header__logo.svg" alt="logo">
-            </div>
-            <div class="header__menu">
-                <div class="header__phone">
-                    <img src="./image/header__phone-icon.svg" alt="phone">
-                    <p class="header__phone-number">+7 (915) 111 55 11</p>
+            <div class="header__container">
+                <div class="header__logo">
+                    <img class="header__logo" src="./image/header__logo.svg" alt="logo">
                 </div>
                 <div class="header__menu">
-                    <img src="./image/header__menu-icon.svg" alt="menu">
+                    <div class="header__phone">
+                        <img src="./image/header__phone-icon.svg" alt="phone">
+                        <p class="header__phone-number">+7 (915) 111 55 11</p>
+                    </div>
+                    <div class="header__menu_icon">
+                        <img src="./image/header__menu-icon.svg" alt="menu">
+                    </div>
                 </div>
             </div>
         </div>
@@ -37,11 +39,13 @@
         <section class="banner">
             <div class="container">
                 <div class="banner__image">
-                    <img src="./image/banner__background-image.png" alt="banner">
+                    <img class="banner__image_img" src="./image/banner__background-image.png" alt="banner">
+                    <div class="banner__text">
+                        <p class="banner__title">Бухгалтерские обслуживание</p>
+                        <p class="banner__subtitle">для СНТ и коттеджных поселков<br> и гаражных кооперативов</p>
+                    </div>
                 </div>
-                <div class="banner__text">
-                    <p class="banner__title">Бухгалтерские обслуживание<br>для СНТ и коттеджных поселков<br> и гаражных кооперативов</p>
-                </div>
+                
             </div>
         </section>
 
