add style course

--- a/index.html
+++ b/index.html
@@ -206,17 +206,63 @@
         <!-- course -->
         <section class="course">
             <div class="container">
-                <div class="course__title"></div>
-                <div class="course__subtitle"></div>
-                <div class="course__cards">
-                    <div class="course__card_content">
-                        <img src="./image/course__cards_icon.svg" alt="icon">
-                        <div class="course__card_text">
-                            <p class="course__card_title">< 50</p>
-                            <p class="course__card_subtitle">участков</p>
+                <div class="course__container">
+                    <div class="course__title">Курс поддержки</div>
+                    <div class="course__subtitle">Цена зависит от количества участков в вашем СНТ</div>
+                    <div class="course__cards_row1">
+                        <div class="course__card">
+                            <div class="course__card_content">
+                                <img class="course__cards_icon" src="./image/course__cards_icon.svg" alt="icon">
+                                 <div class="course__card_text">
+                                    <p class="course__card_title">< 50</p>
+                                    <p class="course__card_subtitle">участков</p>
+                                 </div>
+                            </div>
+                            <button class="course__button">Позвонить</button>
+                        </div>
+                        <div class="course__card">
+                            <div class="course__card_content">
+                                <img class="course__cards_icon" src="./image/course__cards_icon.svg" alt="icon">
+                                 <div class="course__card_text">
+                                    <p class="course__card_title">< 50</p>
+                                    <p class="course__card_subtitle">участков</p>
+                                 </div>
+                            </div>
+                            <button class="course__button">Позвонить</button>
+                        </div>
+                        <div class="course__card">
+                            <div class="course__card_content">
+                                <img class="course__cards_icon" src="./image/course__cards_icon.svg" alt="icon">
+                                 <div class="course__card_text">
+                                    <p class="course__card_title">< 50</p>
+                                    <p class="course__card_subtitle">участков</p>
+                                 </div>
+                            </div>
+                            <button class="course__button">Позвонить</button>
                         </div>
                     </div>
-                    <button class="course__button">Позвонить</button>
+                    <div class="course__cards_row2">
+                        <div class="course__card">
+                            <div class="course__card_content">
+                                <img class="course__cards_icon" src="./image/course__cards_icon.svg" alt="icon">
+                                 <div class="course__card_text">
+                                    <p class="course__card_title">< 50</p>
+                                    <p class="course__card_subtitle">участков</p>
+                                 </div>
+                            </div>
+                            <button class="course__button">Позвонить</button>
+                        </div>
+                        <div class="course__card">
+                            <div class="course__card_content">
+                                <img class="course__cards_icon" src="./image/course__cards_icon.svg" alt="icon">
+                                 <div class="course__card_text">
+                                    <p class="course__card_title">< 50</p>
+                                    <p class="course__card_subtitle">участков</p>
+                                 </div>
+                            </div>
+                            <button class="course__button">Позвонить</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
