--- a/index.html
+++ b/index.html
@@ -272,36 +272,37 @@
         <!-- feedback -->
         <section class="feedback">
             <div class="container">
-                <div class="feedback__text">
-                    <div class="feedback__title">Cвяжитесь с нами</div>
-                    <div class="feedback__title_description">Пожалуйста, укажите свои имя, телефон и e-mail. В комментариях можете указать свой вопрос или желаемое время и способ связи с вами. Мы ценим своих клиентов и обязательно свяжемся с вами.</div>
-                    <div class="feedback__contacts">Также вы можете написать нам на info@sntbuh.ru или позвонить +7 (915) 111 55 11
-                    </div>
-                    <button class="feedback__text_button">Написать в WhatsApp</button>
-                    <div class="feedback__subtitle">Обратная связь</div>
-                    <div class="feedback__subtitle_description">Поделитесь мнением о нашей работе или задайте нам любой интересующий вас вопрос в поле комментарий</div>
-                </div>
-                <div class="feedback__form">
-                    <div class="feedback__form_up">
-                        <div class="feedback__form_left">
-                            <input type="text" name="Имя" id="">
-                            <input type="tel" name="Телефон" id="">
+                <div class="feedback__container">
+                    <div class="feedback__text">
+                        <div class="feedback__title">Cвяжитесь с нами</div>
+                        <div class="feedback__title_description">Пожалуйста, укажите свои имя, телефон и e-mail. В комментариях можете указать свой вопрос или желаемое время и способ связи с вами. Мы ценим своих клиентов и обязательно свяжемся с вами.</div>
+                        <div class="feedback__contacts">Также вы можете написать нам на info@sntbuh.ru или позвонить +7 (915) 111 55 11
                         </div>
-                        <div class="feedback__form_right">
-                            <input type="text" name="Фамилия" id="">
-                            <input type="email" name="E-mail*" id="">
+                        <button class="feedback__text_button">Написать в WhatsApp</button>
+                        <div class="feedback__subtitle">Обратная связь</div>
+                        <div class="feedback__subtitle_description">Поделитесь мнением о нашей работе или задайте нам любой интересующий вас вопрос в поле комментарий</div>
+                    </div>
+                    <div class="feedback__form">
+                        <div class="feedback__form_up">
+                            <div class="feedback__form_left">
+                                <input type="text" name="Имя" id="">
+                                <input type="tel" name="Телефон" id="">
+                            </div>
+                            <div class="feedback__form_right">
+                                <input type="text" name="Фамилия" id="">
+                                <input type="email" name="E-mail*" id="">
+                            </div>
                         </div>
+                        <div class="feedback__form_center">
+                            <input type="text" name="Комментарий" id="">
+                        </div>
+                        <div class="feedback__form_description">
+                            <input type="checkbox" name="" id="">
+                            <p class="feedback__form_description_text">Нажимая кнопку «Отправить», я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года №152-ФЗ «О персональных данных», на условиях и для целей, определенных в Согласии на обработку персональных данных *</p>
+                        </div>
+                        <button class="feedback__form_button">Отправить</button>
                     </div>
-                    <div class="feedback__form_center">
-                        <input type="text" name="Комментарий" id="">
-                    </div>
-                    <div class="feedback__form_description">
-                        <input type="checkbox" name="" id="">
-                        <p class="feedback__form_description_text">Нажимая кнопку «Отправить», я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года №152-ФЗ «О персональных данных», на условиях и для целей, определенных в Согласии на обработку персональных данных *</p>
-                    </div>
-                    <button class="feedback__form_button">Отправить</button>
                 </div>
-
             </div>
         </section>
     </main>
