add style banner text

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">Сдача отчетности</p>
+                                <p class="priority__card_subtitle">Мы вовремя составляем и сдаем все необходимые отчеты в ИФНС, Росстат и</p>
                             </div>
                         </div>
                         <div class="priority__card">
@@ -300,7 +300,10 @@
                             <input class="feedback__checkbox" type="checkbox" name="" id="" >
                             <p class="feedback__form_description_text">Нажимая кнопку «Отправить», я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года №152-ФЗ «О персональных данных», на условиях и для целей, определенных в Согласии на обработку персональных данных *</p>
                         </div>
-                        <button class="feedback__form_button">Отправить</button>
+                        <div class="feedback__button_container">
+                            <button class="feedback__form_button">Отправить</button>
+                            <div></div>
+                        </div>
                     </div>
                 </div>
             </div>
